src/objects/CST_User_Settings_CUST__c.object
<CustomObject>
    <description>Holds user authorization settings for the Customer Search Tool. Every row reflects a single User/Country/Level combination. Users with access to multiple countries will have multiple rows in this table : MERC, CUST : Created on 02/11/2014 by Sean Harrison, Mavens Consulting</description>
    <fields>
        <fullName>Access_Level_CUST__c</fullName>
        <description>Level of authorized access to search fields as reflected in the search form and result lists. E.g. 2</description>
        <inlineHelpText>Level of authorized access to search fields as reflected in the search form and result lists. E.g. 2</inlineHelpText>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Access_Status_CUST__c</fullName>
        <description>Contains the status of the access request</description>
        <inlineHelpText>Pending: Waiting on Approval
Denied: Manager denied Request
Approved: Access granted
Under Review: Under Audit Review
Expired: Access expired before it was reviewed</inlineHelpText>
        <label>Access Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Date_CUST__c</fullName>
        <description>The date that the audit began</description>
        <inlineHelpText>When the audit began.</inlineHelpText>
        <label>Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CST_User_CUST__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is a lookup to an Account record containing information for an Lilly employee or designate. Adding an Account here will authorize this user to utilized the Customer Search Tool</description>
        <inlineHelpText>This field is a lookup to an Account record containing information for an Lilly employee or designate. Adding an Account here will authorize this user to utilized the Customer Search Tool</inlineHelpText>
        <label>CST User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CST User Settings</relationshipLabel>
        <relationshipName>CST_User_Settings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code_CUST__c</fullName>
        <description>2-letter ISO code for the country this user is authorized to search against</description>
        <inlineHelpText>2-letter ISO code for the country this user is authorized to search against</inlineHelpText>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Justification_for_Access_CUST__c</fullName>
        <description>A field for the user to put their business case for access.</description>
        <inlineHelpText>The user&apos;s business case for why they need access.</inlineHelpText>
        <label>Justification for Access</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Status_CUST__c</fullName>
        <description>The last status for this record. This is used to notify the users of status changes, and is cleared after that notification is sent.</description>
        <label>Last Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Global_ID_CUST__c</fullName>
        <description>The Managers Global ID</description>
        <inlineHelpText>The Global ID of the Users Manager</inlineHelpText>
        <label>Manager Global ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_CUST__c</fullName>
        <description>The start date of the access, will reset every 6 or so months</description>
        <inlineHelpText>When Access was granted.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Name_CUST__c</fullName>
        <formula>CST_User_CUST__r.FirstName + &apos; &apos; + CST_User_CUST__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>CST User Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manager_Global_ID_CUST__c</columns>
        <columns>CST_User_CUST__c</columns>
        <columns>Access_Status_CUST__c</columns>
        <columns>Access_Level_CUST__c</columns>
        <columns>Country_Code_CUST__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSTUS-{000000}</displayFormat>
        <label>CST User Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CST User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Acct_must_be_an_Employee</fullName>
        <active>true</active>
        <description>Account must be of an &quot;Employee&quot; record type</description>
        <errorConditionFormula>CST_User_CUST__r.RecordType.Name != &apos;Employee&apos;</errorConditionFormula>
        <errorDisplayField>CST_User_CUST__c</errorDisplayField>
        <errorMessage>Account must be of an &quot;Employee&quot; record type</errorMessage>
    </validationRules>
</CustomObject>